# internal/api/openapi_types.gen.go
@@ -43,12 +43,14 @@ type Error struct {
 
 // NodeDefinition defines model for NodeDefinition.
 type NodeDefinition struct {
-	Fields map[string]NodeField `json:"fields"`
-	Type   TaskType             `json:"type"`
+	Fields     map[string]NodeField `json:"fields"`
+	TimeoutSec uint16               `json:"timeoutSec"`
+	Type       TaskType             `json:"type"`
 }
 
 // NodeField defines model for NodeField.
 type NodeField struct {
+	Key    *string `json:"key"`
 	UseEnv bool    `json:"useEnv"`
 	Value  *string `json:"value"`
 }
@@ -191,12 +193,11 @@ type ViewPort struct {
 
 // WorkflowDefinition defines model for WorkflowDefinition.
 type WorkflowDefinition struct {
-	Edges    []WorkflowEdge    `json:"edges"`
-	Env      map[string]string `json:"env"`
-	Nodes    []WorkflowNode    `json:"nodes"`
-	Position []float32         `json:"position"`
-	Viewport ViewPort          `json:"viewport"`
-	Zoom     float32           `json:"zoom"`
+	Edges    []WorkflowEdge `json:"edges"`
+	Nodes    []WorkflowNode `json:"nodes"`
+	Position []float32      `json:"position"`
+	Viewport ViewPort       `json:"viewport"`
+	Zoom     float32        `json:"zoom"`
 }
 
 // WorkflowEdge defines model for WorkflowEdge.
