# internal/model/workflow_definition.go
@@ -1,5 +1,3 @@
-// Because we reuse the same model for db so we need to add json tag for the model
-
 package model
 
 import "github.com/tuanvumaihuynh/roboflow/pkg/xerrors"
@@ -16,7 +14,7 @@ func (t TaskType) Validate() error {
 	case TaskRaybotCloseBox:
 	case TaskRaybotLiftBox:
 	case TaskRaybotDropBox:
-	case TaskRaybotCheckQrCode:
+	case TaskRaybotCheckQRCode:
 	case TaskRaybotWaitGetItem:
 	default:
 		return xerrors.ThrowInvalidArgument(nil, "invalid task type")
@@ -36,7 +34,7 @@ const (
 	TaskRaybotLiftBox  TaskType = "LIFT_BOX"
 	TaskRaybotDropBox  TaskType = "DROP_BOX"
 
-	TaskRaybotCheckQrCode TaskType = "CHECK_QR"
+	TaskRaybotCheckQRCode TaskType = "CHECK_QR"
 
 	TaskRaybotWaitGetItem TaskType = "WAIT_GET_ITEM"
 )
@@ -83,15 +81,23 @@ type WorkflowNode struct {
 }
 
 type NodeDefinition struct {
-	Type   TaskType             `json:"type" validate:"required"`
-	Fields map[string]NodeField `json:"fields" validate:"required"`
-	// TimeoutSec uint16            `json:"timeout_sec" validate:"required,gte=1"`
+	Type       TaskType             `json:"type" validate:"required"`
+	Fields     map[string]NodeField `json:"fields" validate:"required"`
+	TimeoutSec uint16               `json:"timeout_sec" validate:"required,gte=1"`
 }
+
+const (
+	NodeDefinitionFieldRaybotID  = "raybot_id"
+	NodeDefinitionFieldDirection = "direction"
+	NodeDefinitionFieldLocation  = "location"
+	NodeDefinitionFieldDistance  = "distance"
+)
 
 // TODO: NodeField Value can handle generic type
 type NodeField struct {
 	UseEnv bool    `json:"use_env" validate:"required"`
-	Value  *string `json:"value" validate:"required"`
+	Key    *string `json:"key"`
+	Value  *string `json:"value"`
 }
 
 type ViewPort struct {
